# MuZeroGoJax

./: .gitignore  LICENSE  README.md  game.py  game_test.py  main.py  models.py  pyproject.toml  requirements.txt  setup.cfg  simulation.py  simulation_test.py  train.py
.github/workflows/: pylint.yml  python-app.yml  test-game.yml  test-low-level-modules.yml  test-main.yml  test-manager.yml  test-metrics.yml  test-models.yml  test-train.yml
configs/: 2023_03_04_7x7.cfg  7x7.cfg  play_against_model.cfg
src/: game.py  main.py  models.py  train.py
src/gojax/: __init__.py  constants.py  demo.py  go.py  rng.py  serialize.py  state_index.py
src/models/: __init__.py  base.py  embed.py  policy.py  state_embed.py  transition.py  value.py
src/muzero_gojax/: data.py  drive.py  game.py  logger.py  losses.py  main.py  manager.py  metrics.py  nt_utils.py  train.py
tests/: random_self_play_3x3_42rng_expected_trajectory.txt  sample_trajectory.txt  test_game.py  test_loss_fns.py  test_losses.py  test_main.py  test_metrics.py  test_models.py  test_nt_utils.py  test_train.py
tests/integration/: test_main.py
tests/test_data/: sample_trajectory.txt
tests/unit/: test_data.py  test_drive.py  test_game.py  test_losses.py  test_manager.py  test_metrics.py  test_models.py  test_nt_utils.py  test_train.py
trained_models/2022-12-06/: build_config.json
trained_models/2022_12_07_7x7/: build_config.json
trained_models/2022_12_10_7x7/: build_config.json
trained_models/2022_12_22_7x7/: build_config.json
trained_models/2023_01_09_7x7/: build_config.json
(+22 files in other folders)
