[metadata]
name = muzero-gojax
version = 0.0.1
author = Eddie Huang
author_email = aigagror@gmail.com
description = The MuZero reinforcement algorithm built on the GoJAX library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aigagror/MuZeroGoJax
project_urls =
    Bug Tracker = https://github.com/aigagror/MuZeroGoJax/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src